# starex

./: .gitignore  .rustc_info.json  Cargo.toml  Makefile  README.md  starex
data/: starex.toml
src/: main.rs
src/cache/: cache.rs  cache_enum.rs  cache_struct.rs  mod.rs
src/cli/: cli.rs  cli_struct.rs  mod.rs
src/config/: config.rs  config_struct.rs  mod.rs
src/core/: init.rs  kill.rs  mod.rs  net.rs  start.rs  status.rs
src/core/holiday/: holiday.rs  holiday_struct.rs  mod.rs
src/core/time/: time.rs
